Various refactoring